// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTokens renders empty result 1`] = `
<SideEffect(DocumentTitle)
  title="API Tokens - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      action={
        <ForwardRef
          data-test-id="create-token"
          priority="primary"
          size="small"
          to="/settings/account/api/auth-tokens/new-token/"
        >
          Create New Token
        </ForwardRef>
      }
      noTitleStyles={false}
      title="Auth Tokens"
    />
    <AlertLink
      openInNewTab={false}
      priority="warning"
      size="normal"
      to="/settings/org-slug/developer-settings/new-internal"
      withoutMarginBottom={false}
    >
      Auth Tokens are tied to the logged in user, meaning they'll stop working if the user leaves the organization! We suggest using internal integrations to create/manage tokens tied to the organization instead.
    </AlertLink>
    <TextBlock>
      Authentication tokens allow you to perform actions against the Sentry API on behalf of your account. They're the easiest way to get started using the API.
    </TextBlock>
    <TextBlock>
      <span
        key="5"
      >
        <span
          key="0"
        >
          For more information on how to use the web API, see our 
        </span>
        <a
          href="https://docs.sentry.io/hosted/api/"
          key="2"
        >
          <span
            key="1"
          >
            documentation
          </span>
        </a>
        <span
          key="3"
        >
          .
        </span>
      </span>
    </TextBlock>
    <TextBlock>
      <small>
        psst. Looking for the 
        <strong>
          DSN
        </strong>
         for an SDK? You'll find that under
         
        <strong>
          [Project] » Settings » Client Keys
        </strong>
        .
      </small>
    </TextBlock>
    <Panel>
      <PanelHeader>
        Auth Token
      </PanelHeader>
      <PanelBody
        flexible={false}
        withPadding={false}
      >
        <EmptyMessage>
          You haven't created any authentication tokens yet.
        </EmptyMessage>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`ApiTokens renders with result 1`] = `
<SideEffect(DocumentTitle)
  title="API Tokens - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      action={
        <ForwardRef
          data-test-id="create-token"
          priority="primary"
          size="small"
          to="/settings/account/api/auth-tokens/new-token/"
        >
          Create New Token
        </ForwardRef>
      }
      noTitleStyles={false}
      title="Auth Tokens"
    />
    <AlertLink
      openInNewTab={false}
      priority="warning"
      size="normal"
      to="/settings/org-slug/developer-settings/new-internal"
      withoutMarginBottom={false}
    >
      Auth Tokens are tied to the logged in user, meaning they'll stop working if the user leaves the organization! We suggest using internal integrations to create/manage tokens tied to the organization instead.
    </AlertLink>
    <TextBlock>
      Authentication tokens allow you to perform actions against the Sentry API on behalf of your account. They're the easiest way to get started using the API.
    </TextBlock>
    <TextBlock>
      <span
        key="5"
      >
        <span
          key="0"
        >
          For more information on how to use the web API, see our 
        </span>
        <a
          href="https://docs.sentry.io/hosted/api/"
          key="2"
        >
          <span
            key="1"
          >
            documentation
          </span>
        </a>
        <span
          key="3"
        >
          .
        </span>
      </span>
    </TextBlock>
    <TextBlock>
      <small>
        psst. Looking for the 
        <strong>
          DSN
        </strong>
         for an SDK? You'll find that under
         
        <strong>
          [Project] » Settings » Client Keys
        </strong>
        .
      </small>
    </TextBlock>
    <Panel>
      <PanelHeader>
        Auth Token
      </PanelHeader>
      <PanelBody
        flexible={false}
        withPadding={false}
      >
        <ApiTokenRow
          key="apitoken123"
          onRemove={[Function]}
          token={
            Object {
              "dateCreated": 2018-01-12T02:01:41.000Z,
              "scopes": Array [
                "scope1",
                "scope2",
              ],
              "token": "apitoken123",
            }
          }
        />
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;
